--- a/index.html
+++ b/index.html
@@ -5,57 +5,59 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Modern backery</title>
+  <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
   <header>
     <nav>
-      <a href="#">
+      <a href="./index.html">
         <img src="./images/logo.svg" alt="Логотип пекарні shop bakery">
       </a>
       <ul>
         <li>
-          <a href="#">Франшиза</a>
+          <a class="nav-link" href="#traditions-section">Наші традиції</a>
         </li>
         <li>
-          <a href="#">Наші традиції</a>
+          <a class="nav-link" href="#chefs-section">Шеф-кухарі</a>
         </li>
         <li>
-          <a href="#">Формати</a>
+          <a class="nav-link" href="#formats-section">Формати</a>
         </li>
         <li>
-          <a href="#">Контакти</a>
+          <a class="nav-link" href="#contacts-section">Контакти</a>
         </li>
       </ul>
     </nav>
     <!-- request call back -->
-    <button type="button">Замовити дзвінок</button>
+    <button class="btn" type="button">Замовити дзвінок</button>
   </header>
   <main>
     <section>
-      <h1>Сучасна пекарня</h1>
+      <h1 class="hero-title"><span class="accent">Сучасна</span> пекарня</h1>
     </section>
-    <section>
-      <ul>
+    <section id="traditions-section">
+      <ul class="advantages-list">
         <li>Великий попит на ринку</li>
         <li>Доступні за бюджетом формати</li>
         <li>Досвідчена управлінська команда</li>
       </ul>
-      <h2>Новий формат традицій</h2>
+      <h2 class="section-title">Новий формат традицій</h2>
       <p>
-        <span>shop bakery</span> — це пекарня, яка взяла все найкраще, і зберегла смак традиційної випічки та
+        <span class="accent">shop bakery</span> — це пекарня, яка взяла все найкраще, і зберегла смак традиційної
+        випічки та
         натуральність інгредієнтів.
       </p>
       <p>
         Ми працюємо як найвідоміші мережі—
-        <span>5 хвилин і замовлення готове.</span>
+        <span class="accent">5 хвилин і замовлення готове.</span>
         А ще у наших пекарень стильний дизайн
         та висока якість обслуговування!
       </p>
       <img src="./images/baker-man.jpg" alt="Baker man">
     </section>
-    <section>
-      <h2>Наші найкращі шеф -кухарі</h2>
+    <section id="chefs-section">
+      <h2 class="section-title">Наші найкращі <span class="accent">шеф-кухарі</span></h2>
       <ul>
         <li>
           <article>
@@ -77,28 +79,31 @@
         </li>
       </ul>
     </section>
-    <section>
-      <h2>Формати</h2>
+    <section id="formats-section">
+      <h2 class="section-title">Формати</h2>
       <ul>
         <li>
           <article>
-            <h3>Walrus</h3>
+            <h3 lang="en">Walrus</h3>
           </article>
         </li>
         <li>
           <article>
-            <h3>Horseshoe</h3>
+            <h3 lang="en">Hh3seshoe</h3>
           </article>
         </li>
         <li>
           <article>
-            <h3>Handlebar</h3>
+            <h3 lang="en">Handlebar</h3>
           </article>
         </li>
       </ul>
     </section>
-    <section>
-      <h2>Приєднуйся до мережі пекарень</h2>
+    <section id="contacts-section">
+      <h2 class="section-title">Приєднуйся до мережі пекарень</h2>
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5080.327257819747!2d30.4912733!3d50.4566776!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637c006b2d%3A0xaf86385f19996ff0!2z0YPQuy4g0KHQtdGH0LXQstGL0YUg0KHRgtGA0LXQu9GM0YbQvtCyLCA1NCwg0JrQuNC10LIsINCj0LrRgNCw0LjQvdCwLCAwMjAwMA!5e0!3m2!1sru!2sus!4v1766589316730!5m2!1sru!2sus"
+        width="603" height="595" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
   </main>
   <footer>
@@ -133,7 +138,7 @@
         <li><a href="#"><!-- instagram icon  --></a></li>
       </ul>
       <a href="http://" target="_blank">Політика конфіденційності</a>
-      <p>© 2022 Дані захищені</p>
+      <p>&copy; 2022 Дані захищені</p>
     </address>
   </footer>
 </body>
