--- a/index.html
+++ b/index.html
@@ -15,156 +15,176 @@
 
 <body>
   <header>
-    <nav>
-      <a href="./index.html">
-        <img src="./images/logo.svg" alt="Логотип пекарні shop bakery">
-      </a>
-      <ul>
-        <li>
-          <a class="nav-link" href="#traditions-section">Наші традиції</a>
-        </li>
-        <li>
-          <a class="nav-link" href="#chefs-section">Шеф-кухарі</a>
-        </li>
-        <li>
-          <a class="nav-link" href="#formats-section">Формати</a>
-        </li>
-        <li>
-          <a class="nav-link" href="#contacts-section">Контакти</a>
-        </li>
-      </ul>
-    </nav>
-    <!-- request call back -->
-    <button class="btn" type="button">Замовити дзвінок</button>
+    <div class="container">
+      <nav>
+        <a href="./index.html">
+          <img src="./images/logo.svg" alt="Логотип пекарні shop bakery">
+        </a>
+        <ul>
+          <li>
+            <a class="nav-link" href="#traditions-section">Наші традиції</a>
+          </li>
+          <li>
+            <a class="nav-link" href="#chefs-section">Шеф-кухарі</a>
+          </li>
+          <li>
+            <a class="nav-link" href="#formats-section">Формати</a>
+          </li>
+          <li>
+            <a class="nav-link" href="#contacts-section">Контакти</a>
+          </li>
+        </ul>
+      </nav>
+      <!-- request call back -->
+      <button class="btn" type="button">Замовити дзвінок</button>
+    </div>
   </header>
   <main>
+    <section class="hero-section">
+      <div class="container">
+        <h1 class="hero-title"><span class="accent">Сучасна</span> пекарня</h1>
+      </div>
+    </section>
     <section>
-      <h1 class="hero-title"><span class="accent">Сучасна</span> пекарня</h1>
+      <div class="container">
+        <h2 class="visually-hidden">Наші переваги</h2>
+        <ul class="advantages-list">
+          <li class="advantages-list-item">Великий попит на ринку</li>
+          <li class="advantages-list-item">Доступні за бюджетом формати</li>
+          <li class="advantages-list-item">Досвідчена управлінська команда</li>
+        </ul>
+      </div>
     </section>
-    <section id="traditions-section">
-      <ul class="advantages-list">
-        <li class="advantages-list-item">Великий попит на ринку</li>
-        <li class="advantages-list-item">Доступні за бюджетом формати</li>
-        <li class="advantages-list-item">Досвідчена управлінська команда</li>
-      </ul>
-      <h2 class="section-title">Новий формат традицій</h2>
-      <p class="traditions-text">
-        <span class="brand uppercase">shop bakery</span> — це пекарня, яка взяла все найкраще, і зберегла смак
-        традиційної
-        випічки та
-        натуральність інгредієнтів.
-      </p>
-      <p class="traditions-text">
-        Ми працюємо як найвідоміші мережі—
-        <span class="brand">5 хвилин і замовлення готове.</span>
-        А ще у наших пекарень стильний дизайн
-        та висока якість обслуговування!
-      </p>
-      <img src="./images/baker-man.jpg" alt="Baker man">
+    <section class="traditions-section section" id="traditions-section">
+      <div class="container">
+        <h2 class="traditions-title section-title">Новий формат традицій</h2>
+        <p class="traditions-text">
+          <span class="brand uppercase">shop bakery</span> — це пекарня, яка взяла все найкраще, і зберегла смак
+          традиційної
+          випічки та
+          натуральність інгредієнтів.
+        </p>
+        <p class="traditions-text">
+          Ми працюємо як найвідоміші мережі—
+          <span class="brand">5 хвилин і замовлення готове.</span>
+          А ще у наших пекарень стильний дизайн
+          та висока якість обслуговування!
+        </p>
+        <img src="./images/baker-man.jpg" alt="Baker man">
+      </div>
     </section>
-    <section id="chefs-section">
-      <h2 class="section-title">Наші найкращі <span class="accent">шеф-кухарі</span></h2>
-      <ul>
-        <li>
-          <article>
-            <h3 class="chefs-title">Настя</h3>
-            <p>Привіт, я Настя!</p>
-            <p>Вже 10 років, я свтілюю у життя цікаві та смачні ідеї.</p>
-            <p>Я випічу для васнайсмачніщі вироби!</p>
-          </article>
-        </li>
-        <li>
-          <article>
-            <h3 class="chefs-title">Влад</h3>
-            <p>Привіт, я Влад!</p>
-            <p>Мій кодитерський стаж вже 18 років. SHOP BEKERY - це наша любов, з якою ми ділимось кожен раз з Вами
-              черезнашу випічку!
-            </p>
-            <p>Я зроблю для вас унікальну начинку на будь який смак!</p>
-          </article>
-        </li>
-      </ul>
+    <section class="section" id="chefs-section">
+      <div class="container">
+        <h2 class="chefs-section-title section-title">Наші найкращі <span class="accent">шеф-кухарі</span></h2>
+        <ul>
+          <li>
+            <article>
+              <h3 class="chefs-title">Настя</h3>
+              <p>Привіт, я Настя!</p>
+              <p>Вже 10 років, я свтілюю у життя цікаві та смачні ідеї.</p>
+              <p>Я випічу для васнайсмачніщі вироби!</p>
+            </article>
+          </li>
+          <li>
+            <article>
+              <h3 class="chefs-title">Влад</h3>
+              <p>Привіт, я Влад!</p>
+              <p>Мій кодитерський стаж вже 18 років. SHOP BEKERY - це наша любов, з якою ми ділимось кожен раз з Вами
+                черезнашу випічку!
+              </p>
+              <p>Я зроблю для вас унікальну начинку на будь який смак!</p>
+            </article>
+          </li>
+        </ul>
+      </div>
     </section>
-    <section id="formats-section">
-      <h2 class="section-title">Формати</h2>
-      <ul>
-        <li>
-          <article>
-            <h3 class="formats-title" lang="en">Walrus</h3>
-            <div class="formats-text">
-              <p>Площа: до 120 м2</p>
-              <p>Меню: розширене меню</p>
-              <p>Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2 офіціанти-різнороби</p>
-              <p></p>Посадкові місця: є</p>
-            </div>
-          </article>
-        </li>
-        <li>
-          <article>
-            <h3 class="formats-title" lang="en">Horseshoe</h3>
-            <div class="formats-text">
-              <p>Площа: до 25 м2</p>
-              <p>Меню: найпопулярніші позиції меню</p>
-              <p>Штат: 2 продавці-касири, 2 пекарі, 1 помічник пекаря</p>
-              <p>Посадкові місця: відсутні</p>
-            </div>
-          </article>
-        </li>
-        <li>
-          <article>
-            <h3 class="formats-title" lang="en">Handlebar</h3>
-            <div class="formats-text">
-              <p>Площа: до 15 м2</p>
-              <p>Меню: найпопулярніші позиції меню</p>
-              <p>Штат: 1 продавець, 1 пекар, 1 помічник пекаря</p>
-              <p>Посадкові місця: відсутні</p>
-            </div>
-          </article>
-        </li>
-      </ul>
+    <section class="section" id="formats-section">
+      <div class="container">
+        <h2 class="formats-section-titlesection-title">Формати</h2>
+        <ul>
+          <li>
+            <article>
+              <h3 class="formats-title" lang="en">Walrus</h3>
+              <div class="formats-text">
+                <p>Площа: до 120 м2</p>
+                <p>Меню: розширене меню</p>
+                <p>Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2 офіціанти-різнороби</p>
+                <p>Посадкові місця: є</p>
+              </div>
+            </article>
+          </li>
+          <li>
+            <article>
+              <h3 class="formats-title" lang="en">Horseshoe</h3>
+              <div class="formats-text">
+                <p>Площа: до 25 м2</p>
+                <p>Меню: найпопулярніші позиції меню</p>
+                <p>Штат: 2 продавці-касири, 2 пекарі, 1 помічник пекаря</p>
+                <p>Посадкові місця: відсутні</p>
+              </div>
+            </article>
+          </li>
+          <li>
+            <article>
+              <h3 class="formats-title" lang="en">Handlebar</h3>
+              <div class="formats-text">
+                <p>Площа: до 15 м2</p>
+                <p>Меню: найпопулярніші позиції меню</p>
+                <p>Штат: 1 продавець, 1 пекар, 1 помічник пекаря</p>
+                <p>Посадкові місця: відсутні</p>
+              </div>
+            </article>
+          </li>
+        </ul>
+      </div>
     </section>
-    <section id="contacts-section">
-      <h2 class="section-title">Приєднуйся до мережі пекарень</h2>
-      <p>Заповни форму, щоб ми звʼязались з тобою!</p>
-      <iframe
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5080.327257819747!2d30.4912733!3d50.4566776!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637c006b2d%3A0xaf86385f19996ff0!2z0YPQuy4g0KHQtdGH0LXQstGL0YUg0KHRgtGA0LXQu9GM0YbQvtCyLCA1NCwg0JrQuNC10LIsINCj0LrRgNCw0LjQvdCwLCAwMjAwMA!5e0!3m2!1sru!2sus!4v1766589316730!5m2!1sru!2sus"
-        width="603" height="595" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <section class="section" id="contacts-section">
+      <div class="container">
+        <h2 class="contacts-section-title section-title">Приєднуйся до мережі пекарень</h2>
+        <p>Заповни форму, щоб ми звʼязались з тобою!</p>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5080.327257819747!2d30.4912733!3d50.4566776!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637c006b2d%3A0xaf86385f19996ff0!2z0YPQuy4g0KHQtdGH0LXQstGL0YUg0KHRgtGA0LXQu9GM0YbQvtCyLCA1NCwg0JrQuNC10LIsINCj0LrRgNCw0LjQvdCwLCAwMjAwMA!5e0!3m2!1sru!2sus!4v1766589316730!5m2!1sru!2sus"
+          width="603" height="595" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
     </section>
   </main>
   <footer>
-    <!-- footer content -->
-    <nav>
-      <a href="#">
-        <img src="./images/logo.svg" alt="Логотип пекарні shop bakery">
-      </a>
-      <ul>
-        <li>
-          <a class="nav-link" href="#">Франшиза</a>
-        </li>
-        <li>
-          <a class="nav-link" href="#">Наші традиції</a>
-        </li>
-        <li>
-          <a class="nav-link" href="#">Формати</a>
-        </li>
-        <li>
-          <a class="nav-link" href="#">Контакти</a>
-        </li>
-      </ul>
-    </nav>
-    <address>
-      <ul>
-        <li><a class="address-link" href="tel:+380960000007">+ 38 (096) 000 00 07</a></li>
-        <li><a class="address-link" href="mailto:info@shop-bakery.com">info@shop-bakery.com</a></li>
-        <li><a class="address-link" href="https://maps.app.goo.gl/YTUnw9JfwPmuPXRf6" target="_blank">
-            Україна, м. Київ,вул. Січових Стрільців 54</a>
-        </li>
-        <li><a href="#"><!-- facebook icon  --></a></li>
-        <li><a href="#"><!-- instagram icon  --></a></li>
-      </ul>
-      <a class="address-link" href="http://" target="_blank">Політика конфіденційності</a>
-      <p class="address-copyright">&copy; 2022 Дані захищені</p>
-    </address>
+    <div class="container">
+      <!-- footer content -->
+      <nav>
+        <a href="#">
+          <img src="./images/logo.svg" alt="Логотип пекарні shop bakery">
+        </a>
+        <ul>
+          <li>
+            <a class="nav-link" href="#">Франшиза</a>
+          </li>
+          <li>
+            <a class="nav-link" href="#">Наші традиції</a>
+          </li>
+          <li>
+            <a class="nav-link" href="#">Формати</a>
+          </li>
+          <li>
+            <a class="nav-link" href="#">Контакти</a>
+          </li>
+        </ul>
+      </nav>
+      <address>
+        <ul>
+          <li><a class="address-link" href="tel:+380960000007">+ 38 (096) 000 00 07</a></li>
+          <li><a class="address-link" href="mailto:info@shop-bakery.com">info@shop-bakery.com</a></li>
+          <li><a class="address-link" href="https://maps.app.goo.gl/YTUnw9JfwPmuPXRf6" target="_blank">
+              Україна, м. Київ,вул. Січових Стрільців 54</a>
+          </li>
+          <li><a href="#"><!-- facebook icon  --></a></li>
+          <li><a href="#"><!-- instagram icon  --></a></li>
+        </ul>
+        <a class="address-link" href="http://" target="_blank">Політика конфіденційності</a>
+        <p class="address-copyright">&copy; 2022 Дані захищені</p>
+      </address>
+    </div>
   </footer>
 </body>
 
