--- a/index.html
+++ b/index.html
@@ -84,23 +84,34 @@
     <section class="section" id="chefs-section">
       <div class="container">
         <h2 class="chefs-section-title section-title">Наші найкращі <span class="accent">шеф-кухарі</span></h2>
-        <ul>
-          <li>
-            <article>
-              <h3 class="chefs-title">Настя</h3>
-              <p>Привіт, я Настя!</p>
-              <p>Вже 10 років, я свтілюю у життя цікаві та смачні ідеї.</p>
-              <p>Я випічу для васнайсмачніщі вироби!</p>
+        <ul class="chefs-list">
+          <li class="chefs-item">
+            <article class="chef-card">
+              <img class="chef-photo" src="./images/nastya-chef.jpg" alt="Nastya chef">
+              <div>
+                <h3 class="chefs-title">Настя</h3>
+                <div class="chef-text">
+                  <p>Привіт, я Настя!</p>
+                  <p>Вже 10 років, я втілюю <br>у життя цікаві та смачні ідеї.</p>
+                  <p>Я випічу для вас <br>найсмачніщі вироби!</p>
+                </div>
+              </div>
             </article>
           </li>
-          <li>
-            <article>
-              <h3 class="chefs-title">Влад</h3>
-              <p>Привіт, я Влад!</p>
-              <p>Мій кодитерський стаж вже 18 років. SHOP BEKERY - це наша любов, з якою ми ділимось кожен раз з Вами
-                черезнашу випічку!
-              </p>
-              <p>Я зроблю для вас унікальну начинку на будь який смак!</p>
+          <li class="chefs-item">
+            <article class="chef-card">
+              <img class="chef-photo" src="./images/vlad-chef.jpg" alt="Vlad chef">
+              <div>
+                <h3 class="chefs-title">Влад</h3>
+                <div class="chef-text">
+                  <p>Привіт, я Влад!</p>
+                  <p>Мій кодитерський стаж вже 18 років. SHOP BEKERY - це наша любов, з якою ми ділимось
+                    кожен раз з Вами
+                    черезнашу випічку!
+                  </p>
+                  <p>Я зроблю для вас унікальну начинку на будь який смак!</p>
+                </div>
+              </div>
             </article>
           </li>
         </ul>
@@ -109,89 +120,122 @@
     <section class="section" id="formats-section">
       <div class="container">
         <h2 class="formats-section-title section-title">Формати</h2>
-        <ul class="formats-list">
-          <li class="formats-list-item">
-            <article class="formats-card">
-              <h3 class="formats-title" lang="en">Walrus</h3>
-              <div class="formats-text">
-                <p>Площа: до 120 м2</p>
-                <p>Меню: розширене меню</p>
-                <p>Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2 офіціанти-різнороби</p>
-                <p>Посадкові місця: є</p>
-              </div>
-            </article>
-          </li>
-          <li class="formats-list-item">
-            <article class="formats-card">
-              <h3 class="formats-title" lang="en">Horseshoe</h3>
-              <div class="formats-text">
-                <p>Площа: до 25 м2</p>
-                <p>Меню: найпопулярніші позиції меню</p>
-                <p>Штат: 2 продавці-касири, 2 пекарі, 1 помічник пекаря</p>
-                <p>Посадкові місця: відсутні</p>
-              </div>
-            </article>
-          </li>
-          <li class="formats-list-item">
-            <article class="formats-card">
-              <h3 class="formats-title" lang="en">Handlebar</h3>
-              <div class="formats-text">
-                <p>Площа: до 15 м2</p>
-                <p>Меню: найпопулярніші позиції меню</p>
-                <p>Штат: 1 продавець, 1 пекар, 1 помічник пекаря</p>
-                <p>Посадкові місця: відсутні</p>
-              </div>
-            </article>
-          </li>
-        </ul>
+        <div class="formats-container">
+          <button class="carousel-button" type="button">
+            <svg width="16" height="16">
+              <use href="./images/icons-sprite.svg#icon-arrow"></use>
+            </svg>
+          </button>
+          <ul class="formats-list">
+            <li class="formats-list-item">
+              <article class="formats-card">
+                <h3 class="formats-title" lang="en">Walrus</h3>
+                <div class="formats-text">
+                  <p>Площа: до 120 м2</p>
+                  <p>Меню: розширене меню</p>
+                  <p>Штат: 2 продавці-касири, 2 пекарі, 2 помічники пекаря, 2 офіціанти-різнороби</p>
+                  <p>Посадкові місця: є</p>
+                </div>
+              </article>
+            </li>
+            <li class="formats-list-item">
+              <article class="formats-card">
+                <h3 class="formats-title" lang="en">Horseshoe</h3>
+                <div class="formats-text">
+                  <p>Площа: до 25 м2</p>
+                  <p>Меню: найпопулярніші позиції меню</p>
+                  <p>Штат: 2 продавці-касири, 2 пекарі, 1 помічник пекаря</p>
+                  <p>Посадкові місця: відсутні</p>
+                </div>
+              </article>
+            </li>
+            <li class="formats-list-item">
+              <article class="formats-card">
+                <h3 class="formats-title" lang="en">Handlebar</h3>
+                <div class="formats-text">
+                  <p>Площа: до 15 м2</p>
+                  <p>Меню: найпопулярніші позиції меню</p>
+                  <p>Штат: 1 продавець, 1 пекар, 1 помічник пекаря</p>
+                  <p>Посадкові місця: відсутні</p>
+                </div>
+              </article>
+            </li>
+          </ul>
+          <button class="carousel-button" type="button">
+            <svg width="16" height="16">
+              <use href="./images/icons-sprite.svg#icon-arrow"></use>
+            </svg>
+          </button>
+        </div>
       </div>
     </section>
-    <section class="section" id="contacts-section">
+    <section class="contacts-section section" id="contacts-section">
       <div class="container">
-        <h2 class="contacts-section-title section-title">Приєднуйся до мережі пекарень</h2>
-        <p>Заповни форму, щоб ми звʼязались з тобою!</p>
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5080.327257819747!2d30.4912733!3d50.4566776!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637c006b2d%3A0xaf86385f19996ff0!2z0YPQuy4g0KHQtdGH0LXQstGL0YUg0KHRgtGA0LXQu9GM0YbQvtCyLCA1NCwg0JrQuNC10LIsINCj0LrRgNCw0LjQvdCwLCAwMjAwMA!5e0!3m2!1sru!2sus!4v1766589316730!5m2!1sru!2sus"
-          width="603" height="595" allowfullscreen="" loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <div class="contacts-container">
+          <div class="contacts-form">
+            <h2 class="contacts-section-title section-title">Приєднуйся до мережі пекарень</h2>
+            <p>Заповни форму, щоб ми звʼязались з тобою!</p>
+            <!-- form -->
+          </div>
+          <iframe class="contacts-map"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5080.327257819747!2d30.4912733!3d50.4566776!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637c006b2d%3A0xaf86385f19996ff0!2z0YPQuy4g0KHQtdGH0LXQstGL0YUg0KHRgtGA0LXQu9GM0YbQvtCyLCA1NCwg0JrQuNC10LIsINCj0LrRgNCw0LjQvdCwLCAwMjAwMA!5e0!3m2!1sru!2sus!4v1766589316730!5m2!1sru!2sus"
+            width="603" height="595" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+          </iframe>
+        </div>
       </div>
     </section>
   </main>
-  <footer>
+  <footer class="footer">
     <div class="container">
       <!-- footer content -->
-      <nav>
-        <a href="#">
-          <img src="./images/logo.svg" alt="Логотип пекарні shop bakery">
-        </a>
-        <ul>
-          <li>
-            <a class="nav-link" href="#">Франшиза</a>
-          </li>
-          <li>
-            <a class="nav-link" href="#">Наші традиції</a>
-          </li>
-          <li>
-            <a class="nav-link" href="#">Формати</a>
-          </li>
-          <li>
-            <a class="nav-link" href="#">Контакти</a>
-          </li>
-        </ul>
-      </nav>
-      <address>
-        <ul>
-          <li><a class="address-link" href="tel:+380960000007">+ 38 (096) 000 00 07</a></li>
-          <li><a class="address-link" href="mailto:info@shop-bakery.com">info@shop-bakery.com</a></li>
-          <li><a class="address-link" href="https://maps.app.goo.gl/YTUnw9JfwPmuPXRf6" target="_blank">
-              Україна, м. Київ,вул. Січових Стрільців 54</a>
-          </li>
-          <li><a href="#"><!-- facebook icon  --></a></li>
-          <li><a href="#"><!-- instagram icon  --></a></li>
-        </ul>
-        <a class="address-link" href="http://" target="_blank">Політика конфіденційності</a>
-        <p class="address-copyright">&copy; 2022 Дані захищені</p>
-      </address>
+      <div class="footer-container">
+        <nav class="footer-nav">
+          <div class="footer-logo">
+            <a href="#">
+              <img src="./images/logo.svg" alt="Логотип пекарні shop bakery">
+            </a>
+          </div>
+          <ul class="footer-menu">
+            <li>
+              <a class="menu-link" href="#">Франшиза</a>
+            </li>
+            <li>
+              <a class="menu-link" href="#">Наші традиції</a>
+            </li>
+            <li>
+              <a class="menu-link" href="#">Формати</a>
+            </li>
+            <li>
+              <a class="menu-link" href="#">Контакти</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="footer-address">
+          <ul class="address-list">
+            <li><a class="address-link" href="tel:+380960000007">+ 38 (096) 000 00 07</a></li>
+            <li><a class="address-link" href="mailto:info@shop-bakery.com">info@shop-bakery.com</a></li>
+            <li><a class="address-link" href="https://maps.app.goo.gl/YTUnw9JfwPmuPXRf6" target="_blank">
+                Україна, м. Київ,вул. Січових Стрільців 54</a>
+            </li>
+            <li>
+              <a href="#"><!-- facebook icon  --></a>
+              <svg class="address-icon" width="32" height="32">
+                <use href="./images/icons-sprite.svg#icon-facebook"></use>
+              </svg>
+            </li>
+            <li>
+              <a href="#"><!-- instagram icon  --></a>
+              <svg class="address-icon" width="32" height="32">
+                <use href="./images/icons-sprite.svg#icon-instagram"></use>
+              </svg>
+            </li>
+          </ul>
+          <div class="address-info">
+            <a class="address-link" href="http://" target="_blank">Політика конфіденційності</a>
+            <p class="address-copyright">&copy; 2022 Дані захищені</p>
+          </div>
+        </address>
+      </div>
     </div>
   </footer>
 </body>
