--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <header>
+  <header class="header">
     <div class="container">
       <div class="header-container">
         <nav class="header-nav">
@@ -37,7 +37,7 @@
           </ul>
         </nav>
         <!-- request call back -->
-        <button class="btn" type="button">Замовити дзвінок</button>
+        <button class="btn modal-btn-open" type="button">Замовити дзвінок</button>
       </div>
     </div>
   </header>
@@ -83,7 +83,7 @@
     </section>
     <section class="section" id="chefs-section">
       <div class="container">
-        <h2 class="chefs-section-title section-title">Наші найкращі <span class="accent">шеф-кухарі</span></h2>
+        <h2 class="chefs-section-title section-title">Наші найкращі<br> <span class="accent">шеф-кухарі</span></h2>
         <ul class="chefs-list">
           <li class="chefs-item">
             <article class="chef-card">
@@ -161,7 +161,7 @@
               </article>
             </li>
           </ul>
-          <button class="carousel-button" type="button">
+          <button class="carousel-button next" type="button">
             <svg width="16" height="16">
               <use href="./images/icons-sprite.svg#icon-arrow"></use>
             </svg>
@@ -176,6 +176,29 @@
             <h2 class="contacts-section-title section-title">Приєднуйся до мережі пекарень</h2>
             <p>Заповни форму, щоб ми звʼязались з тобою!</p>
             <!-- form -->
+            <form name="contacts-form" autocomplete="off">
+              <div class="form-field">
+                <label class="form-label visually-hidden" for="user-name">Ім'я</label>
+                <input class="form-input" type="text" id="user-name" name="user-name" placeholder="Ім'я" required />
+              </div>
+
+              <div class="form-field">
+                <label class="form-label visually-hidden" for="user-tel">Телефон</label>
+                <input class="form-input" type="tel" name="user-tel" id="user-tel" placeholder="Телефон" required />
+              </div>
+
+              <div class="form-field">
+                <label class="form-label visually-hidden" for="user-email">Електронна пошта</label>
+                <input class="form-input" type="email" name="user-email" id="user-email" placeholder="Електронна пошта"
+                  required />
+              </div>
+
+              <button class="form-btn btn" type="submit">Замовити дзвінок</button>
+
+              <p class="form-terms">Натискаючи на кнопку я погоджуюсь
+                <a class="form-terms-link" href="#">з політикою конфіденційності</a>
+              </p>
+            </form>
           </div>
           <iframe class="contacts-map"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5080.327257819747!2d30.4912733!3d50.4566776!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637c006b2d%3A0xaf86385f19996ff0!2z0YPQuy4g0KHQtdGH0LXQstGL0YUg0KHRgtGA0LXQu9GM0YbQvtCyLCA1NCwg0JrQuNC10LIsINCj0LrRgNCw0LjQvdCwLCAwMjAwMA!5e0!3m2!1sru!2sus!4v1766589316730!5m2!1sru!2sus"
@@ -238,6 +261,42 @@
       </div>
     </div>
   </footer>
+
+  <div class="backdrop 'is-hidden'">
+    <div class="modal">
+      <button class="modal-btn-close" type="button">
+        close
+      </button>
+      <h2 class="modal-title">Замовити дзвінок</h2>
+      <p class="modal-text">Залишіть заявку та наш спеціаліст зв'яжеться з Вами!</p>
+      <!-- form -->
+      <form name="modal-form" autocomplete="off">
+        <div class="form-field">
+          <label class="form-label visually-hidden" for="user-name">Ім'я</label>
+          <input class="form-input" type="text" id="user-name" name="user-name" placeholder="Ім'я" required />
+        </div>
+
+        <div class="form-field">
+          <label class="form-label visually-hidden" for="user-tel">Телефон</label>
+          <input class="form-input" type="tel" name="user-tel" id="user-tel" placeholder="Телефон" required />
+        </div>
+
+        <div class="form-field">
+          <label class="form-label visually-hidden" for="user-email">Електронна пошта</label>
+          <input class="form-input" type="email" name="user-email" id="user-email" placeholder="Електронна пошта"
+            required />
+        </div>
+
+        <button class="form-btn btn" type="submit">Замовити дзвінок</button>
+
+        <p class="form-terms">Натискаючи на кнопку я погоджуюсь
+          <a class="form-terms-link" href="#">з політикою конфіденційності</a>
+        </p>
+      </form>
+    </div>
+  </div>
+
+  <script src="./js/modal.js"></script>
 </body>
 
 </html>
