--- a/index.html
+++ b/index.html
@@ -5,12 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Modern backery</title>
-  <!-- fonts -->
-  <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;900&display=swap" rel="stylesheet"> -->
-  <!-- styles -->
-  <link rel="stylesheet" href="./css/styles.css">
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 
 <body>
@@ -105,7 +100,7 @@
                 <h3 class="chefs-title">Влад</h3>
                 <div class="chef-text">
                   <p>Привіт, я Влад!</p>
-                  <p>Мій кодитерський стаж вже 18 років. SHOP BEKERY - це наша любов, з якою ми ділимось
+                  <p>Мій кодитерський стаж вже 18 років.SHOP BEKERY - це наша любов, з якою ми ділимось
                     кожен раз з Вами
                     черезнашу випічку!
                   </p>
@@ -129,6 +124,7 @@
           <ul class="formats-list">
             <li class="formats-list-item">
               <article class="formats-card">
+                <img class="formats-card-image" src="./images/walrus-format.jpg" alt="Walrus format">
                 <h3 class="formats-title" lang="en">Walrus</h3>
                 <div class="formats-text">
                   <p>Площа: до 120 м2</p>
@@ -140,6 +136,7 @@
             </li>
             <li class="formats-list-item">
               <article class="formats-card">
+                <img class="formats-card-image" src="./images/horseshoe-format.jpg" alt="Horseshoe format">
                 <h3 class="formats-title" lang="en">Horseshoe</h3>
                 <div class="formats-text">
                   <p>Площа: до 25 м2</p>
@@ -151,6 +148,7 @@
             </li>
             <li class="formats-list-item">
               <article class="formats-card">
+                <img class="formats-card-image" src="./images/handlebar-format.jpg" alt="Handlebar format">
                 <h3 class="formats-title" lang="en">Handlebar</h3>
                 <div class="formats-text">
                   <p>Площа: до 15 м2</p>
